--- a/index.html
+++ b/index.html
@@ -559,7 +559,8 @@
                             send me a message!</p>
                     </div>
                     <div class="contact-wrapper">
-                        <form id="contactform" class="form-wrapper" method="POST" autocomplete="off"> <input type="text"
+                        <form id="contactform" class="form-wrapper" action="https://formspree.io/f/xayajvbo"
+  method="POST" autocomplete="off"> <input type="text"
                                 name="_gotcha" style="display:none">
                             <div class="input-wrapper"> <label for="name" class="input-label">Name</label> <input
                                     type="text" name="name" class="contact-input" id="name" required> </div>
@@ -602,7 +603,7 @@
     <script src="cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script src="js/main.js"></script>
-    <script> const contactform = document.getElementById('contactform'); contactform.setAttribute('action', 'https:' + '//formspree.io/' + 'olawalearidunnu' + '@' + 'gmail' + '.' + 'com'); </script>
+   <!-- <script> const contactform = document.getElementById('contactform'); contactform.setAttribute('action', 'https:' + '//formspree.io/' + 'olawalearidunnu' + '@' + 'gmail' + '.' + 'com'); </script> -->
     <script> (function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', '../../www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-45666519-2', 'auto'); ga('send', 'pageview'); </script>
 </body>
 <!-- Mirrored from bchiang7.github.io/v2/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Jun 2021 09:43:21 GMT -->
