--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         <div id="timeline">
                             <div class="timeline-block">
                                 <div class="timeline-content">
-                                    <h2 class="position">Eclipsoft I.T Company</h2>
+                                    <h2 class="position">E-octane Consulting</h2>
                                     <!-- <h3 class="company"><a
                                             href="http://www.ccis.northeastern.edu/program/information-science-bs/"
                                             target="_blank">NU College of Computer &amp; Information Science</a></h3> -->
@@ -248,7 +248,7 @@
                                 </div>
                                 <div class="timeline-img">
                                     <div class="sprite university"></div>
-                                </div> <span class="date">2018 - Present</span>
+                                </div> <span class="date">2018 - 2021</span>
                             </div>
                             <div class="timeline-block">
                                 <div class="timeline-content">
