--- a/index.html
+++ b/index.html
@@ -94,16 +94,20 @@
                     <div class="about-wrapper"> <img class="headshot" src="img/headshot.jpg" alt="headshot">
                         <div class="about-text-wrapper">
 
-                            <p class="about-text">I’m a software engineer always excited and always ready to bring
-                                solutions that are needed to solve real-world
-                                challenges. I have seven years experience of developing and deploying software
-                                solutions. Having extensive
-                                industry and full lifecycle experience in software development, along with exceptional
-                                analytical, design and
-                                problem-solving capabilities. Excellent communication skills and able to work alongside
-                                with teams.</p>
-                            <p class="about-text">I love learning new and better ways to create seamless user
-                                experiences with clean, efficient, and scalable code.</p>
+                            <p class="about-text">I’m a skilled and passionate software engineer with a strong focus on developing high-quality and efficient software solutions. With ten years of experience in the field, I have a deep understanding of software development principles and practices. 
+
+Having obtained a HND in Computer Science, I possess a solid foundation in computer science and programming languages such as C#, Angular, Nodejs, Reactjs, Nextjs, Asp.net MVC, .NET Core, .NET 6, Mysql, Mssql Server, Wpf, XAML, Html, CSS, Vb.net. I’m proficient in various software development methodologies, including agile and waterfall, and have a proven track record of delivering successful projects on time and within budget. 
+
+Throughout my career, I have actively contributed to the full software development lifecycle, from requirements gathering and system design to coding, testing, and deployment. I have a keen eye for detail and a strong problem-solving mindset, allowing me to identify and resolve complex technical issues effectively. 
+
+In addition to my technical skills, I’m a great team player and collaborator. I excel in communicating with both technical and non-technical stakeholders, understanding their requirements, and translating them into practical software solutions. I can also adept at working in cross-functional teams, fostering a collaborative and productive work environment. 
+
+Passionate about continuous learning, I stay updated with the latest industry trends and technologies. I actively seek out opportunities for professional growth and I constantly expanding my skill set to stay ahead in the ever-evolving field of software engineering. 
+
+In summary, I’m a dedicated software engineer who combines technical expertise, problem-solving abilities, and effective communication skills to deliver innovative and reliable software solutions.  
+
+ .</p>
+                            <p class="about-text">My commitment to excellence and continuous improvement makes me a valuable asset to any software development team.</p>
 
                         </div>
                     </div>
