--- a/index.html
+++ b/index.html
@@ -242,17 +242,31 @@ In summary, I’m a dedicated software engineer who combines technical expertise
                         <div id="timeline">
                             <div class="timeline-block">
                                 <div class="timeline-content">
+                                    <h2 class="position">First City Monument Bank (FCMB)</h2>
+                                    <p class="job-desc">As a Senior FullStack Developer,
+                                         I have gained extensive experience working on a range of software projects, 
+                                         particularly within the banking sector. 
+                                         One notable project I contributed to is Slip-Free, 
+                                         a software utilized by bank tellers for smooth and efficient money deposits and withdrawals. 
+                                         Additionally, I have worked on Merchant Reporting, a powerful software solution that enables corporate entities to generate a variety of comprehensive reports. 
+                                         These are just a few examples of my diverse portfolio, as I have been involved in numerous other impactful projects in the bank.
+
+                                    </p>
+                                </div>
+                                <div class="timeline-img">
+                                    <div class="sprite university"></div>
+                                </div> <span class="date">2022 - Till Date</span>
+                            </div>
+                            <div class="timeline-block">
+                                <div class="timeline-content">
                                     <h2 class="position">E-octane Consulting</h2>
-                                    <!-- <h3 class="company"><a
-                                            href="http://www.ccis.northeastern.edu/program/information-science-bs/"
-                                            target="_blank">NU College of Computer &amp; Information Science</a></h3> -->
                                     <p class="job-desc">Full Stack Developer, series of solutions both enterprise and
                                         SaaS have been developed and deployed for our clients range from mobile
                                         solutions to web solutions and desktop solutions.</p>
                                 </div>
                                 <div class="timeline-img">
                                     <div class="sprite university"></div>
-                                </div> <span class="date">2018 - 2021</span>
+                                </div> <span class="date">2019 - 2021</span>
                             </div>
                             <div class="timeline-block">
                                 <div class="timeline-content">
@@ -265,7 +279,7 @@ In summary, I’m a dedicated software engineer who combines technical expertise
                                 </div>
                                 <div class="timeline-img">
                                     <div class="sprite research"></div>
-                                </div> <span class="date">Mar 2018 - Mar 2018</span>
+                                </div> <span class="date">Mar 2018 - Mar 2019</span>
                             </div>
                             <div class="timeline-block">
                                 <div class="timeline-content">
